--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -197,7 +197,7 @@ This is about system administration.
 
 === Wiki ===
 
-There is another wiki which which is for internal use only at https://wiki.internal.openmoko.org/
+There is another wiki which is for internal use only at https://wiki.internal.openmoko.org/
 
 === Bugzilla ===
 
