Added Debian package name to get qmake.

--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -6,7 +6,7 @@
 ** gtk-dev
 ** pango-dev
 ** atk-dev
-** qmake from Qt4
+** qmake from Qt4 (libqt4-dev on Debian)
 
 ===Build everything in one run using Qmake===
 {{Note|qmake is Mickey's preferred build tool, you can use autotools as well...}}
