--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -40,7 +40,7 @@ The GSM/GPRS modem is Texas Instruments Calypso based.
 
 ==== CALYPSO digital baseband ====
 
-Unfortunately we cannot provide many details on the GSM chipset due to very tight NDA's.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the S3C2410.  On that interface, GSM 07.05, 07.10 and other standardized protocols are used.
+Unfortunately we cannot provide many details on the GSM chipset due to very tight NDAs.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the S3C2410.  On that interface, [http://www.3gpp.org/ftp/Specs/archive/07_series/07.05/ GSM 07.05], [http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/ GSM 07.10] and other standardized protocols are used.
 
 ==== TWL3014 analog baseband ====
 
