add link to installing prerequisites for other distributions near Gentoo instructions too

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -96,6 +96,8 @@ echo 'dev-util/monotone ~'`readlink /etc/make.profile | awk -F / '{print $6}'`\
 emerge -u subversion quilt monotone diffstat texi2html dev-util/git psyco
 </pre>
 
+[http://www.openembedded.org/wiki/OEandYourDistro  Instructions for installing prerequisites in other distributions]
+
 If the local user name does not match the user name with which you access SVN, you can put the following script in your PATH before the regular location of "svn" (usually /usr/bin/. Change
 the script below if your "svn" resides in a different directory. You can find out where it is
 with "which svn".).
