--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -71,6 +71,9 @@ Python bindings seem to be a commonly requested feature.
 === C++ Bindings ===
 There is a whole skilled C++ community coming from the [http://qtopia.net Qtopia] and [http://opie.handhelds.org Opie] projects. If we would consider basing OpenMoko C++ Bindings on [http://www.gtkmm.org/ Gtkmm], then we could drag these guys in.
 
+=== Perl Bindings ===
+Another popular language
+
 == Software Related: Foreign Widget Set Bindings ==
 
 === Qt Integration ===
