https://svn.openmoko.org/ -> http://svn.openmoko.org/ ( http://lists.openmoko.org/pipermail/openmoko-devel/2007-February/000389.html )

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -154,9 +154,8 @@ The checkout should take about 45 minutes over an Internet connection with a rou
 
 <pre>
 cd $OMDIR
-svn co -r 887 https://svn.openmoko.org/ openmoko
+svn co -r 887 http://svn.openmoko.org/ openmoko
 </pre>
-
 
 ==== Installing BitBake ====
 '''(Role: BUILD)'''
