--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -14,6 +14,11 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 ** [[Development resources#SVN|svn + svnweb]]
 ** [[Development resources#Projects|projects]]
 
+== Introduction ==
+
+* [[Introduction]] - What openmoko is and what is not.
+** [[Introduction#Photos|Photos]]
+
 == Developer's Documentation ==
 
 === Hands-on Guides ===
