add mass storage mode

--- a/USB_Product_IDs.mw
+++ b/USB_Product_IDs.mw
@@ -3,13 +3,13 @@ We are using the following USB Vendor and Product ID's in this project:
 {| border=1 |
 | Vendor ID || Product ID || Description 
 |-
-| 0x1457 || 0x5117 || Neo1973 usbnet (g_ether, CDC Ethernet) Mode
+| 0x1457 || 0x5117 || Neo1973 kernel usbnet (g_ether, CDC Ethernet) Mode
 |-
 | 0x1457 || 0x5118 || Debug Board (FT2232D) for Neo1937
 |-
 | 0x1457 || 0x5119 || Neo1973 u-boot usbtty CDC Ethernet Mode
 |-
-| 0x1457 || 0x5120 || TBD
+| 0x1457 || 0x5120 || Neo1973 kernel mass storage (g_storage) Mode
 |-
 | 0x1457 || 0x5121 || TBD
 |-
