--- a/USB_Product_IDs.mw
+++ b/USB_Product_IDs.mw
@@ -9,9 +9,9 @@ We are using the following USB Vendor and Product ID's in this project:
 |-
 | 0x1457 || 0x5119 || Neo1973 u-boot usbtty CDC Ethernet Mode
 |-
-| 0x1457 || 0x5120 || Neo1973 kernel mass storage (g_storage) Mode
+| 0x1457 || 0x5120 || Neo1973 u-boot generic serial Mode
 |-
-| 0x1457 || 0x5121 || TBD
+| 0x1457 || 0x5121 || Neo1973 kernel mass storage (g_storage) Mode
 |-
 | 0x1457 || 0x5122 || TBD
 |-
