Introduction - fixme added

--- a/Introduction.mw
+++ b/Introduction.mw
@@ -1,4 +1,8 @@
-openmoko is ...
+::FIXME: Write short introduction here, make few images, ... just short briefing for anybody who came for the first time, no details, no specifications. 
+
+'''openmoko''' is ...
+
+It is based on ...
 
 == Photos ==
 
