--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -103,6 +103,7 @@ The USB Host controller is inside the S3C2410
 
 The USB Device controller is inside the S3C2410 
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_udc.patch
+* [[USB Product IDs]]
 
 === Audio ===
 
