--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -11,7 +11,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 ** [[Introduction#Photos|Photos]]
 
 == Project Resources ==
-* [[Development resources]] - Describes the resources (lists, svn, ...)
+* [[Development resources]] - Describes the resources (lists, svn,&nbsp;...)
 ** [[Development resources#Mailing_Lists|Mailing Lists]]
 ** [[Development resources#Wiki|Wiki]]
 ** [[Development resources#Bugzilla|Bugzilla]]
