--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -79,6 +79,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 == Miscellaneous ==
 * [[Press Coverage]] - What the press says about the OpenMoko project
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented some day
+* [[Wish List - Hardware]] - A collection of ideas we'd like to see in the next Neo release
 
 == Sections by target audience ==
 
