add info about usb.ids

--- a/USB_Product_IDs.mw
+++ b/USB_Product_IDs.mw
@@ -23,3 +23,5 @@ We are using the following USB Vendor and Product ID's in this project:
 |-
 | 0x1457 || 0x5126 || TBD
 |}
+
+The abovementioned ID's have already been submitted for inclusion into the http://www.linux-usb.org/usb.ids list
