--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -1,4 +1,4 @@
-===Some small hardware enhancement could be cheap, but very usefull. Please add your ideas/wishes here:===
+===Some small hardware enhancement could be cheap, but very useful. Please add your ideas/wishes here:===
 <br \>
 *;Video-capable camera
 :preferably in rotatable turret set into top of unit, so it can face in either direction, making it useful for video conferencing
