added external GPIO access

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -58,5 +58,7 @@
 
 *;Small metal frame for protection (like Siemens M65, only with more style)
 
+*;free GPIO ports on a connector to allow easy, simple hardware extensions
+
 Sources:
 *http://www.linuxtogo.org/gowiki/OpenMoko/Hardware_wishes_for_next_versions
