In my opinion there are 4 Points they must stand alone.

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -23,8 +23,11 @@
 :Could be used to detect when to turn of the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
 
 *;Standard 3.5mm jack
-:Multitouch screen
-:Multi I/O adapter: VGA, standard Jack (line in & out), standard USB
+
+*;Multitouch screen
+
+*;Multi I/O adapter
+:VGA, standard Jack (line in & out), standard USB
 
 *;MMC/SD/SDIO slot (rather than?) miniSD or microSD.
 :Cheaper cards
@@ -50,7 +53,8 @@
 *;powered USB 2.0 host
 
 *;UMTS support
-:Dump the '''''egg-shaped''''' case design and go '''''rectangular''''' for more screen space
+
+*;Dump the '''''egg-shaped''''' case design and go '''''rectangular''''' for more screen space
 
 *;A standard slip-on or clip-on template (possibly with buttons) to make the touch-screen blind accessible.
 
