--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -8,13 +8,15 @@ Press coverage about OpenMoko / Neo1973 :
 * http://www.theinquirer.net/default.aspx?article=35590
 
 === In German ===
-* 2006-08-11
-** [http://golem.de/0611/48824.html golem.de] OpenMoko kündigt Open-Source-Handy an
-** [http://www.heise.de/newsticker/meldung/80714 heise online] Smartphone mit offener Linux-Plattform
-* 2006-11-08
-** [http://www.pro-linux.de/news/2006/10448.html pro-linux] Offenes Linux-Smartphone »OpenMoko« für Januar 2007 angekündigt 
-* 2007-02-13
-** [http://www.heise.de/tr/artikel/85138 Technology Review] Open-Source-Handy, nächster Versuch
-** [http://www.pro-linux.de/news/2007/10833.html pro-linux] OpenMoko-Quellcode angekündigt
-* 2007-02-15
-** [http://www.heise.de/newsticker/meldung/85354 heise online] OpenMoko: Linux-Plattform für Handys freigegeben
+==== 2006 ====
+===== 2006-08-11 =====
+* [http://golem.de/0611/48824.html golem.de] OpenMoko kündigt Open-Source-Handy an
+* [http://www.heise.de/newsticker/meldung/80714 heise online] Smartphone mit offener Linux-Plattform
+===== 2006-11-08 =====
+* [http://www.pro-linux.de/news/2006/10448.html pro-linux] Offenes Linux-Smartphone »OpenMoko« für Januar 2007 angekündigt 
+==== 2007 ====
+===== 2007-02-13 =====
+* [http://www.heise.de/tr/artikel/85138 Technology Review] Open-Source-Handy, nächster Versuch
+* [http://www.pro-linux.de/news/2007/10833.html pro-linux] OpenMoko-Quellcode angekündigt
+===== 2007-02-15 =====
+* [http://www.heise.de/newsticker/meldung/85354 heise online] OpenMoko: Linux-Plattform für Handys freigegeben
