some changes in the layout

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -1,46 +1,46 @@
 ===Some small hardware enhancement could be cheap, but very useful. Please add your ideas/wishes here:===
 <br \>
 *;Video-capable camera
-:preferably in rotatable turret set into top of unit, so it can face in either direction, making it useful for video conferencing
+**preferably in rotatable turret set into top of unit, so it can face in either direction, making it useful for video conferencing
 
 *;Integrated WiFi hardware
-:To sync data
-:To access Internet when WiFi is available (at home, work, school, friends)
-:For VoIP (this uses much power but maybe the user have the charger connected)
-:for videoconferencing (as with AccessGrid)
+**To sync data
+**To access Internet when WiFi is available (at home, work, school, friends)
+**For VoIP (this uses much power but maybe the user have the charger connected)
+**for videoconferencing (as with AccessGrid)
 
 *;LED
-:blinking LED would be cheap and less power consumting, good for informing the user about new SMS/Email....
-:Note: the LED and button ideas could be combined: illuminated buttons)
+**blinking LED would be cheap and less power consumting, good for informing the user about new SMS/Email....
+**Note: the LED and button ideas could be combined: illuminated buttons)
 
 *;D-Pad and Buttons
-:Adding a D-pad (to the bottom of the phone) and 2 to 4 buttons (to the top) would provide some tactile input controls, in addition to the touchscreen. They could be used as shortcut keys in the menu, or playback control when playing media. When the phone is held sideways, they can be used as games controls. (With touchscreen alone, gameplay options are limited)
+**Adding a D-pad (to the bottom of the phone) and 2 to 4 buttons (to the top) would provide some tactile input controls, in addition to the touchscreen. They could be used as shortcut keys in the menu, or playback control when playing media. When the phone is held sideways, they can be used as games controls. (With touchscreen alone, gameplay options are limited)
 
 *;Accelerometer 
-:[http://www.linuxtogo.org/gowiki/OpenMokoIdeasWithAccelerometer list of ideas requiring Accelerometer]
+**[http://www.linuxtogo.org/gowiki/OpenMokoIdeasWithAccelerometer list of ideas requiring Accelerometer]
 
 *;SIR transceiver
-:Could be used to detect when to turn of the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
+**Could be used to detect when to turn of the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
 
 *;Standard 3.5mm jack
 
 *;Multitouch screen
 
 *;Multi I/O adapter
-:VGA, standard Jack (line in & out), standard USB
+**VGA, standard Jack (line in & out), standard USB
 
 *;MMC/SD/SDIO slot (rather than?) miniSD or microSD.
-:Cheaper cards
-:More durable cards
-:Cards are harder to lose
-:Wider selection of accesories, including SDIO accessories.
-:More widely accepted format
-:Only because CF takes too much room (or CF would be the wish, instead)
+**Cheaper cards
+**More durable cards
+**Cards are harder to lose
+**Wider selection of accesories, including SDIO accessories.
+**More widely accepted format
+**Only because CF takes too much room (or CF would be the wish, instead)
 
 *;Thumb keyboard or keyboard attachment accessory
-:Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
-:Could be a clip on keyboard that attaches to the serial port or communicates by bluetooth (not preferred for permanent keyboard users).
-:cheap clippable miniusb keyboard
+**Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
+**Could be a clip on keyboard that attaches to the serial port or communicates by bluetooth (not preferred for permanent keyboard users).
+**cheap clippable miniusb keyboard
 
 *;LASER keyboard (can be a full QWERTY keyboard)
 
