/* Press coverage of November 2006 Amsterdam release */

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,13 +1,12 @@
 Press coverage about OpenMoko / Neo1973 :
 
-== Press coverage of November 2006 Amsterdam release ==
-
+=== English ===
+==== November 2006 Amsterdam release ====
 * http://www.linuxdevices.com/news/NS2986976174.html
 * http://www.linuxdevices.com/news/NS7056478804.html
 * http://lwn.net/Articles/208298/
 * http://www.theinquirer.net/default.aspx?article=35590
-
-=== In German ===
+=== German ===
 ==== 2006 ====
 ===== 2006-08-11 =====
 * [http://golem.de/0611/48824.html golem.de] OpenMoko kündigt Open-Source-Handy an
