*Empty MediaWiki Message*

--- a/USB_Product_IDs.mw
+++ b/USB_Product_IDs.mw
@@ -1,4 +1,4 @@
-We are using the following USB Vendor and Product ID's in this project:
+We are using the following USB Vendor and Product IDs in this project:
 
 {| border=1 |
 | Vendor ID || Product ID || Description 
@@ -24,4 +24,4 @@ We are using the following USB Vendor and Product ID's in this project:
 | 0x1457 || 0x5126 || TBD
 |}
 
-The abovementioned ID's have already been submitted for inclusion into the http://www.linux-usb.org/usb.ids list
+The abovementioned IDs have already been submitted for inclusion into the http://www.linux-usb.org/usb.ids list
