--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -7,7 +7,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 == Introduction ==
 
-* [[Introduction]] - What openmoko is and what is not.
+* [[Introduction]] - What openmoko is and what it is not.
 ** [[Introduction#Photos|Photos]]
 
 == Project Resources ==
