/* RFID tag */  privacy?

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -51,6 +51,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 =====Ability to insert more than one Sim-Card and (if possible) connect to more than one network at the same time=====
 
 =====RFID tag=====
+*advantages of a RFID tag? I would see a lot privacy problems
 
 =====powered USB 2.0 host=====
 
