--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -45,6 +45,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *cheap clippable miniusb keyboard
 
 =====LASER keyboard (can be a full QWERTY keyboard)=====
+*someone knowing sth about the price?
 
 =====EDGE support=====
 
