--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -19,7 +19,11 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *Adding a D-pad (to the bottom of the phone) and 2 to 4 buttons (to the top) would provide some tactile input controls, in addition to the touchscreen. They could be used as shortcut keys in the menu, or playback control when playing media. When the phone is held sideways, they can be used as games controls. (With touchscreen alone, gameplay options are limited)
 
 =====Accelerometer===== 
-*[http://www.linuxtogo.org/gowiki/OpenMokoIdeasWithAccelerometer list of ideas requiring Accelerometer]
+*[[3D Viewport]]
+*[[Auto Align Map]]
+*[[Computer Mouse]]
+*[[Determine Position]]
+*[[Distance Measuring]]
 
 =====SIR transceiver=====
 *Could be used to detect when to turn of the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
