--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -50,6 +50,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 
 =====LASER keyboard (can be a full QWERTY keyboard)=====
 *someone knowing sth about the price?
+**This doesn't sound like it is likely to be cheap, and (at least for myself) I'm looking for a phone/pda/mp3 player, not for a very bad personal computer with a tiny screen that I can barely read. If it were cheap enough, I suppose it would not be a problem, but I doubt I'd pay a premium for it...--[[User:Perry|Perry]] 14:52, 15 February 2007 (CET)
 
 =====EDGE support=====
 
