/* Changes from v1 to v2 */

--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -60,7 +60,7 @@ We previously had [[Debug Board v1]]
 * get rid of 7-segment LED displays
 ** not really needed.  We have a serial port
 ** could be replaced by one or two GPIO LED's
-* get rid of built-in wiggler
+* get rid of built-in [[wiggler]]
 ** nobody has a parallel port on the laptop these days
 * get rid of li-ion battery (including charger)
 ** the device can be fully usb powered by the laptop
