--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -12,7 +12,9 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *for videoconferencing (as with AccessGrid)
 
 =====LED=====
-*blinking LED would be cheap and less power consumting, good for informing the user about new SMS/Email....
+*A blinking LED would be cheap and low power, good for informing the user about new SMS/Email....
+**A simple alternative to this would be for one small segment of the LCD to be seperately backlit. There are typically many LEDs in the backlight, all normally on equally. This has the large advantage that you can display reasonable amounts of information on the bit of the screen that's illuminated. The disadvantage is the field of view is smaller, and it's comparatively dimmer, as the LCD absorbs some light.
+
 *Note: the LED and button ideas could be combined: illuminated buttons)
 
 =====D-Pad and Buttons=====
