--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -60,7 +60,8 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 =====Ability to insert more than one Sim-Card and (if possible) connect to more than one network at the same time=====
 
 =====RFID tag=====
-*advantages of a RFID tag? I would see a lot privacy problems
+*Advantages of a RFID tag? I would see a lot privacy problems
+**The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
 
 =====powered USB 2.0 host=====
 
