updates from non-BBT page: missing .., "mnt" typo, "psycho" typo

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -86,7 +86,7 @@ following packages must be installed on the build host:
 ;git: version control system used by the Linux kernel and others. Do not confuse this with the "GNU Interactive Tools"
 
 Furthermore, the following package can be installed optionally:
-;psycho: Python just-in-time compiler. Speeds up OpenEmbedded builds (with BitBake) considerably. Strongly recommended.
+;psyco: Python just-in-time compiler. Speeds up OpenEmbedded builds (with BitBake) considerably. Strongly recommended.
 
 Gentoo users can obtain all this with (note that, at the time of writing, Monotone 0.32 isn't available without setting the ~x86 keyword):
 
@@ -175,7 +175,7 @@ cd ..
 
 Obtain a snapshot of the Monotone repository of OpenEmbedded, then update it
 to the latest version, and finally check out our "known to be good" revision.
-We extract things into $OMDIR/openembedded. OE.mnt.bz2 is about 100 MB.
+We extract things into $OMDIR/openembedded. OE.mtn.bz2 is about 100 MB.
 
 <pre>
 wget http://www.openembedded.org/snapshots/OE.mtn.bz2
@@ -186,7 +186,7 @@ mtn --db=OE.mtn checkout --branch=org.openembedded.dev \
 </pre>
 
 {{note|For advanced users: if you ever want to update to the latest version of the repository, you would do a "pull" (see above), followed by:
- cd $OMDIR/openembedded && mnt update}}
+ cd $OMDIR/openembedded && mtn update}}
 
 
 Set up the directories for the cache of upstream files and all material
@@ -209,7 +209,7 @@ There are unfortunately some problems in the build process.
 The following fixes work around them:
 
  cd $OMDIR/sources
- mkdir -p build/tmp/stamps/armv4t-linux
+ mkdir -p ../build/tmp/stamps/armv4t-linux
 
 * upstream moves old packages away, gratuitously breaking downstreams
 
