/* Software Related: Additional Features */  Special Profile would be nice

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -62,6 +62,17 @@ Further details:
 
 The Access group is probably coming out with their Linux platform any time soon. One of the components is a PalmOS emulator which I'd like to see working on OpenMoko as well. There are literally millions of PalmOS apps.
 
+=== Special Profiles ===
+
+After reading something about too much features in mobile phones I thought about the following. It would be nice to have the possibility to choose from several profiles when starting the phone the first time. Every user profile is defined for special kinds of user behaviour. 
+Let me define some example profiles:
+*'''Beginner''': Only basic functionality like, telephone and sms
+*'''Advanced''': included "Beginner" profile and let me say e-mail, pim functions
+*'''Geek''': every functionality you can get
+*'''Granny''': a minimum of functionality
+etc.
+In addition the user should be able to create his own profiles. The advantage is that the user gets not frustrated by thousands of menues. What do you think about such a feature?
+
 == Software Related: Language Bindings ==
 === Python Bindings ===
 Python bindings seem to be a commonly requested feature.  
