/* Usage of atcmd mode */

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -88,7 +88,7 @@ RSTR=`OK'
 
 ==== Usage of atcmd mode ====
 
-The atcmd mode is a passthrough-mode.  Passthrough means that it accepts [[GSM 07.07]] commands, passes them throough the daemon to the phone, and returns you the response.  this is very useful for debugging.
+The atcmd mode is a passthrough-mode.  Passthrough means that it accepts [[GSM 07.07]] commands, passes them through the daemon to the phone, and returns you the response.  this is very useful for debugging.
 
 The atcmd mode can be started using
 
