--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,11 +1,17 @@
 Press coverage about OpenMoko / Neo1973 :
 
 === English ===
+
+==== February 2007 =====
+* http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php
+* http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform
+ 
 ==== November 2006 Amsterdam release ====
 * http://www.linuxdevices.com/news/NS2986976174.html
 * http://www.linuxdevices.com/news/NS7056478804.html
 * http://lwn.net/Articles/208298/
 * http://www.theinquirer.net/default.aspx?article=35590
+
 === German ===
 ==== 2006 ====
 ===== 2006-08-11 =====
