--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -2,10 +2,10 @@ Press coverage about OpenMoko / Neo1973 :
 
 === English ===
 
-==== February 2007 =====
+==== February 2007 ====
 * http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php
 * http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform
- 
+
 ==== November 2006 Amsterdam release ====
 * http://www.linuxdevices.com/news/NS2986976174.html
 * http://www.linuxdevices.com/news/NS7056478804.html
