--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -36,7 +36,7 @@ The GSM/GPRS modem is Texas Instruments Calypso based.
 
 * Connected to: S3C2410 UART1 (full-uart, RxD, TxD, CTS, RTS), /dev/ttySAC0 in userspace
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
-* Accessible GPS antenna jack (if battery cover is removed)
+* Accessible GSM/GPRS antenna jack (if battery cover is removed)
 
 ==== CALYPSO digital baseband ====
 
