/* MMC/SD/SDIO slot (rather than?) miniSD or microSD */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -45,6 +45,9 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *More widely accepted format
 *Only because CF takes too much room (or CF would be the wish, instead)
 
+*One trivial option to add this is a new back. 
+**A new back some 4mm deeper, with a small flex cable that plugs into the existing microSD card socket. A flip-open cover on the right of the phone opposite to the USB socket. This also would enable a thicker battery.
+
 =====Thumb keyboard or keyboard attachment accessory=====
 *Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
 *Could be a clip on keyboard that attaches to the serial port or communicates by bluetooth (not preferred for permanent keyboard users).
