--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -5,6 +5,7 @@ Press coverage about OpenMoko / Neo1973 :
 ==== February 2007 ====
 * [http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] does a preview
 * [http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com]
+* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os/ Image of developer model?]
 
 ==== November 2006 Amsterdam release ====
 * http://www.linuxdevices.com/news/NS2986976174.html
