Links removed at Harald's request.

--- a/Toolchain.mw
+++ b/Toolchain.mw
@@ -1,12 +1,3 @@
 [[OpenEmbedded]] builds its own cross compiler during the bootstrapping/build process.
 
-However, for ease of [[Bootloader]], [[Kernel]] and other development, a stand-alone toolchain is also provided. Since all development machines are running [http://www.debian.org/ Debian] ``stable'', the toolchains is provided in ''.deb'' (dpkg) format at [http://people.gta01.hmw-consulting.de/laforge/dpkg/].
-
-You should install it like
-<pre>
-# apt-get install gcc-3.4-base
-# dpkg --install binutils-arm-linux_2.15-5_i386.deb
-# dpkg --install libgcc1-arm-cross_3.4.3-1_all.deb 
-# dpkg --install cpp-3.4-arm-linux_3.4.3-1_i386.deb
-# dpkg --install gcc-3.4-arm-linux_3.4.3-1_i386.deb
-</pre>
+The links on this page provided a standalone toolchain for [Bootloader]] and [[Kernel]] development. But this is no longer used or up to date. Please use the toolchain that comes with [[OpenEmbedded]].
