--- a/PCF50606.mw
+++ b/PCF50606.mw
@@ -1,3 +1,6 @@
+{{note|this page is horribly outdated and refers to GTA01v3.  Please see 
+http://svn.openmoko.org/trunk/doc/hardware/ (*/pmu-voltage.txt) for up-to-date information.  If somebody could put this in the wiki here, it would be great}}
+
 == Overview ==
 
 The PCF50606 is the Power Management Unit used in GTA01.  Apparently this unit is very popular in MP3 players, as the Rockbox project has talked a lot about writing a driver for it (but hasn't completed any, as far as we know).
