--- a/WM8976.mw
+++ b/WM8976.mw
@@ -1,4 +1,6 @@
-The WM8976 is a setero audio codec with speaker driver.
+The WM8976 is a stereo audio codec with speaker driver.
+
+{{note|It is used in the prototype generations [[Neo1973 Hardware#GTA01v3]] and [[Neo1973 Hardware#GTA01v4]], but not in any released hardware revision, where it was replaced by the [[WM8753]].}}
 
 It supports various sample rates (8, 11.025, 12, 16, 22.05, 24, 32, 44.1 and 48kHz) and features a five-band equalizer as well as 3-D stereo enhancement.
 
