/* Binary packages */  spelling fix

--- a/OpenEmbedded.mw
+++ b/OpenEmbedded.mw
@@ -55,7 +55,7 @@ It contains
 
 === Binary packages ===
 
-The binary packages of intermediate "inofficial" releases are available at 
+The binary packages of intermediate "unofficial" releases are available at 
 http://buildhost.openmoko.org/tmp/gta01/deploy/ipk
 
 The binary packages of intermediate "official" releases are available at 
