--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -46,6 +46,18 @@ The serial port needs a tri-state driver, since it is both connected to the GSM 
 
 == Usage Instructions ==
 
+=== Preconditions ===
+
+==== FT2232D EEPROM ====
+Your Debug Board contains a small serial EEPROM which must be flashed correctly.  FIC has done that for you, in case you have officially been supplied with the board.  However, if you are one of the early adopters, the configuration and USB vendorID / productID might have not yet been set correctly. 
+
+In order to do so, you can use the ftdi_eeprom program from 
+http://www.intra2net.com/de/produkte/opensource/ftdi/
+
+A suitable EEPROM config file will be posted here soon.
+
+=== Hardware connection ===
+
 * [[Connecting Neo1973 with Debug Board v2]]
 
 == History ==
