--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -23,7 +23,7 @@ For the hub, we can use the TUSB2046B chip, which is very common and easily avai
 
 ==== JTAG using FT2232 ====
 
-Basically, we integrate a USB-JTAG adaptor similar to the [Amontec JTAGkey-tiny].  The actual design of what we want to use can be found at 
+Basically, we integrate a USB-JTAG adaptor similar to the [Amontec JTAGkey-tiny].  The actual reference design that we used (Thanks to Joern!) can be found at 
 http://www.joernonline.de/dw/doku.php?id=en:projects:oocdlink
 
 This provides us full JTAG debugging, at about 150times the speed of the [[wiggler]]
