--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -35,8 +35,8 @@ The actual JTAG port is connected with
 
 ==== Serial Port ====
 
-Instead of replicating a true RS232 port, we use a USB serial converter chip,
-such as the FT232 or the PL2303.   It is attached (without level shifter) to the phone's debug port.
+Instead of replicating a true RS232 port, we wanted to use a USB serial converter chip,
+such as the FT232 or the PL2303.   
 
 As it turns out, we can even use the second port of the FT2232 simultaneously with the JTAG.  So no extra FT232 or PL2303 is required.
 
