--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -11,15 +11,15 @@ Architecture of the second version of the Neo1973 debug board:
 
 This bus-powered hub 
 * attaches to the laptop using its upstream port
-* attaches to the FT2232-for-JTAG using downstream port 1
-* attaches to the FT232-for-serial using downstream port 2
+* attaches to the FT2232D for JTAG and serial console on downstream port 1
+* attaches to a free USB-A connector using downstream port 2
 * attaches to the phone using downstream port 3
 
 Using the hub, you can have access to the phone, JTAG and serial simultaneously, through a single USB cable.
 
 You can actually even charge the phone (100mA slow charge) using that downstream port.
 
-For the hub, we can use the TUSB2046B chip, which is very common and easily available.
+For the ISB hub function, we use the TUSB2046B chip.
 
 ==== JTAG using FT2232 ====
 
