/* LASER keyboard (can be a full QWERTY keyboard) */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -55,7 +55,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 =====LASER keyboard (can be a full QWERTY keyboard)=====
 *someone knowing sth about the price?
 **This doesn't sound like it is likely to be cheap, and (at least for myself) I'm looking for a phone/pda/mp3 player, not for a very bad personal computer with a tiny screen that I can barely read. If it were cheap enough, I suppose it would not be a problem, but I doubt I'd pay a premium for it...--[[User:Perry|Perry]] 14:52, 15 February 2007 (CET)
-**I see. I thought sth. like that. In my opinion it would be better to implement an IrDA connector or use the bluetooth interface to connect to a small keyboard. So you could use it if you want but not everyone has to pay the price for such an exclusive feature --[[User:Denis std|Denis]]
+**I see. I thought sth. like that. In my opinion it would be better to implement an IrDA connector or use the bluetooth interface to connect to a small keyboard. So you could use it if you want but not everyone has to pay the price for such an exclusive feature --[[User:Denis std|denis_std]] 19:47, 15 February 2007 (CET)
 
 =====EDGE support=====
 
