Software Related: Additional Features: GPS Assisted Bluetooth Management

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -71,7 +71,44 @@ Let me define some example profiles:
 *'''Geek''': every functionality you can get
 *'''Granny''': a minimum of functionality
 etc.
-In addition the user should be able to create his own profiles. The advantage is that the user gets not frustrated by thousands of menues. What do you think about such a feature?
+In addition the user should be able to create his own profiles. The advantage is that the user gets not frustrated by thousands of menus. What do you think about such a feature?
+
+=== GPS Assisted Bluetooth Management ===
+
+Allow Bluetooth to automatically turn off after loosing connectivity and to automatically turn back on based upon GPS location.
+
+A Bluetooth device is configured for automatic reacquisition based on the following profiles:
+* Manual - only when Bluetooth is on
+* Non-mobile - the target device is not mobile, periodically attempt reacquisition when in the general area of the device.
+* Mobile - the target device is mobile, periodically attempt reacquisition when in the general area of the device.
+
+Each target device is configured as follows:
+* Automatic acquisition at last known location: enable/disable
+* Automatic acquisition at these locations: list of nickname + coordinates + range
+
+==== Non-mobile devices ====
+
+Examples devices include: computers
+
+The location and range of the target device is determined via training.  Periodically, the current GPS coordinates and Bluetooth signal strength are logged. Additionally, connectivity loss events are logged.  An algorithm uses these logs to determine the device location and range.
+
+Connection attempts are made when in a configurable proximity to the device.  The first attempt when entering the proximity and further attempts at a configurable interval.
+
+==== Mobile devices ====
+
+Example devices include: automobiles
+
+Mobile devices are configured to have two types of locations:
+# Last known location
+# Non-mobile locations (homes)
+
+===== Last known location =====
+
+A car is mobile, ideally, when you leave your car, the phone should note the car's location when connectivity is lost and then attempt to reacquire the car when you return to the location of the car.
+
+===== Non-mobile locations (homes) =====
+
+As mobile devices may have multiple users, it is not sufficient to always use the last known location.  In this case, the device may additionally have multiple homes.  For example, a car might have as its homes: home garage and work parking lot.
 
 == Software Related: Language Bindings ==
 === Python Bindings ===
