--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -24,6 +24,26 @@
 {{note|Since the PCB now is loose on one side, you can carefully pull the USB socket and GPS antenna connector out of the right side of the case, and then flip the PCB upwards}}
 [[Image:Gta01b v3 case top open pcb lifted.jpg|700px]]
 
+This shows:
+*At the top on a green board, the bluetooth module, and the square bluetooth antenna.
+*The headset jack is to the right of this.
+**Immediately below the headset jack is the battery connector.
+**Below the battery connector, the two gold pads feed the vibrator motor.
+*To the right of the headset jack is the left speaker connector.
+
+On the other side of the PCB, going from bottom-right corner down-left.
+
+*The small circular connector is the GSM connector to which the ariel connects.
+*To the left of this is the right speaker connector.
+*One of the button switches.
+*USB port.
+*Micro-SD slot
+*SIM slot - overlaying the Micro-SD slot when present.
+*Gold GSM antenna connector. (or is this GPS?)
+**Immediately above this with the grey wire connection is the connection to the built in GPS antenna. 
+
+On the case,
+
 == Empty case frame ==
 
 [[Image:Gta01b v3 case empty white.jpg|700px]]
