--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -81,3 +81,9 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 
 Sources:
 *http://www.linuxtogo.org/gowiki/OpenMoko/Hardware_wishes_for_next_versions
+
+=====Video acceleration=====
+Hardware acceleration for video playback.
+
+=====3D acceleration=====
+3D hardware acceleration for 3D games, GUIs, etc.
