/* Removing PCB from case frame */  Add text explaining what all the connectors are.

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -31,6 +31,7 @@ This shows:
 **Below the battery connector, the two gold pads feed the vibrator motor.
 *To the right of the headset jack is the left speaker connector.
 
+Invisible 
 On the other side of the PCB, going from bottom-right corner down-left.
 
 *The small circular connector is the GSM connector to which the ariel connects.
@@ -42,7 +43,7 @@ On the other side of the PCB, going from bottom-right corner down-left.
 *Gold GSM antenna connector. (or is this GPS?)
 **Immediately above this with the grey wire connection is the connection to the built in GPS antenna. 
 
-On the case,
+On the case picture below, you can see the left and right speakers under the translucent plastic, and the vibrator motor in the middle.
 
 == Empty case frame ==
 
