/* Top case lid removed */  Add description of what can be seen in image.

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -16,6 +16,17 @@
 == Top case lid removed ==
 [[Image:Gta01b v3 case top open white.jpg|700px]]
 
+Visible in this image, from the right, going clockwise.
+
+*The blocky device at the edge of the case is the GPS antenna.
+**To the left of this, there are two gold pads, which are where the earpiece speaker connects.
+*The [[debug board]] connector.
+*At the left, the black semicircular device is the GSM antenna.
+**Immediately to its right, the small circular black/gold object is the microphone
+*At the top right, the button switch (on/off?).
+
+In the middle is the touchscreen LCD, the touchscreen printed wire can be seen beginning at the bottom left of this, through the glass.
+
 == Lifting the PCB on the left side ==
 {{note|You have to bend the plastic case a bit outwards until the headphone jack on the left side of the device becomes loose}}
 [[Image:Gta01b v3 case top open pcb lift white.jpg|700px]]
