/* Top case lid removed */

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -20,6 +20,7 @@ Visible in this image, from the right, going clockwise.
 
 *The blocky device at the edge of the case is the GPS antenna.
 **To the left of this, there are two gold pads, which are where the earpiece speaker connects.
+***Below this, the small silver cylindrical object is the back-up battery.
 *The [[debug board]] connector.
 *At the left, the black semicircular device is the GSM antenna.
 **Immediately to its right, the small circular black/gold object is the microphone
