*Empty MediaWiki Message*

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -20,11 +20,10 @@ Visible in this image, from the right, going clockwise.
 
 *The blocky device at the edge of the case is the GPS antenna.
 **To the left of this, there are two gold pads, which are where the earpiece speaker connects.
-***Below this, the small silver cylindrical object is the back-up battery.
 *The [[debug board]] connector.
 *At the left, the black semicircular device is the GSM antenna.
 **Immediately to its right, the small circular black/gold object is the microphone
-*At the top right, the button switch (on/off?).
+*At the top right, the ''911 button'''
 
 In the middle is the touchscreen LCD, the touchscreen printed wire can be seen beginning at the bottom left of this, through the glass.
 
