/* Removing PCB from case frame */

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -51,7 +51,7 @@ On the other side of the PCB, going from bottom-right corner down-left.
 *USB port.
 *Micro-SD slot
 *SIM slot - overlaying the Micro-SD slot when present.
-*Gold GSM antenna connector. (or is this GPS?)
+*Gold GPS antenna connector.
 **Immediately above this with the grey wire connection is the connection to the built in GPS antenna. 
 
 On the case picture below, you can see the left and right speakers under the translucent plastic, and the vibrator motor in the middle.
