--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -75,6 +75,9 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 
 =====Speakerphone functionality=====
 
+=====Reposition Speakers=====
+* putting the two speakers on opposite sides of the screen would make the stereo sound much more effective
+
 =====Small metal frame for protection (like Siemens M65, only with more style)=====
 
 =====free GPIO ports on a connector to allow easy, simple hardware extensions=====
