updated SVN revision (arbitrarily picked latest) and SJF2410 usage

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -148,13 +148,13 @@ First, we obtain a snapshot of the OpenEmbedded-based tree used by OpenMoko, plu
 ==== Obtaining OpenMoko SVN tree ====
 '''(Role: BUILD)'''
 
-Obtain revision 887 of the OpenMoko tree. This is a "known to be good", version (provided the fixes below are applied). Unfortunately, at some places, "current" versions of upstream packages may get included, thus the build may still fail. If it does, you may wish to inform the authorities.
+Obtain revision 1004 of the OpenMoko tree. This is a "known to be good", version (provided the fixes below are applied). Unfortunately, at some places, "current" versions of upstream packages may get included, thus the build may still fail. If it does, you may wish to inform the authorities.
 
 The checkout should take about 45 minutes over an Internet connection with a round-trip time to svn.openmoko.org of 350 ms.
 
 <pre>
 cd $OMDIR
-svn co -r 887 http://svn.openmoko.org/ openmoko
+svn co -r 1004 http://svn.openmoko.org/ openmoko
 </pre>
 
 ==== Installing BitBake ====
@@ -286,11 +286,12 @@ See also: [[Sjf2410-linux]]
 <pre>
 cd $OMDIR/build/tmp/deploy/images
 
-( echo 0; echo 0; echo 0; echo 2; ) |
-  ./sjf2410 /f:`echo u-boot_nand-gta01bv2-*.bin`
+( echo 0; echo 0; echo 0; echo 3; ) |
+  ./sjf2410 -b -f `echo u-boot_nand-gta01bv2-*.bin`
 </pre>
 
 This will take approximately 12 minutes.
+
 
 === Copy kernel and root FS to microSD card ===
 '''(Role: CARD)'''
